[gd_scene load_steps=4 format=3 uid="uid://b6io5qp6db3l"]

[ext_resource type="Script" path="res://Objects/ExitDoor/exit_door.gd" id="1_hvh2g"]
[ext_resource type="Texture2D" uid="uid://bygfvo7fpvurs" path="res://Assets/Terrain/GrassLand/Props/GrassLand_Entry_2.png" id="1_u2ees"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xjxe6"]
size = Vector2(14, 24)

[node name="ExitDoor" type="Area2D"]
script = ExtResource("1_hvh2g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_xjxe6")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_u2ees")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
